force-app/main/default/objects/Integration_Framework_Response_Access__mdt/Integration_Framework_Response_Access__mdt.object-meta.xml
<CustomObject>
    <label>Integration Framework Response Access</label>
    <pluralLabel>Integration_Framework_Response_Access</pluralLabel>
</CustomObject>