force-app/main/default/objects/Integration_Framework_Response_Access__mdt/fields/Integration_Framework__c.field-meta.xml
<CustomField>
    <fullName>Integration_Framework__c</fullName>
    <label>Integration Framework</label>
    <referenceTo>Integration_Framework_Metadata__mdt</referenceTo>
    <relationshipLabel>Integration_Framework_Response_Access</relationshipLabel>
    <relationshipName>Integration_Framework_Response_Access</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>