force-app/main/default/objects/Integration_Framework_Response_Access__mdt/fields/Permission_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Name__c</fullName>
    <label>PermissionSet Name ( Persona )</label>
    <length>120</length>
    <type>Text</type>
</CustomField>