force-app/main/default/objects/Integration_Framework_Response_Access__mdt/fields/Response_Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Response_Contract_Name__c</fullName>
    <inlineHelpText>Response Contract Name</inlineHelpText>
    <label>Response Contract Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>